[package]
name = "analyzer"
version = "0.1.0"
authors = ["Ziyang Li <liby99@seas.upenn.edu>"]
edition = "2018"

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm10-0" }
petgraph = "0.5"
either = "1.5"
clap = "3.0.0-beta.1"
lazy_static = "1.4"
regex = "1"
rayon = "1.1"
chrono = "0.4"
serde_json = "1.0"
