[package]
name = "analyzer"
version = "0.1.0"
authors = ["Ziyang Li <liby99@seas.upenn.edu>"]
edition = "2018"

[dependencies]
llir = "0.1"
petgraph = "0.5"
clap = "3.0.0-beta.1"
lazy_static = "1.4"
regex = "1"
rayon = "1.1"
chrono = "0.4"
serde = { version = "1.0", features = ["derive", "rc"] }
indicatif = { version = "0.15", features = ["rayon"] }
serde_json = "1.0"
z3 = "0.6"
llvm-sys = "100.0.1"
